--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,7 +22,7 @@ jobs:
         run: python -m pip install --upgrade pip build
 
       - name: Build distributions
-        run: python -m build
+        run: cd analysis && python -m build
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
